--- a/StateAnalysis/StateAnalysis.vcxproj
+++ b/StateAnalysis/StateAnalysis.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Conversion.cpp" />
     <ClCompile Include="MosqConnect.cpp" />
     <ClCompile Include="BSAnalysis.cpp" />
     <ClCompile Include="StateAnalysis.cpp" />
@@ -151,6 +152,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BSAnalysis.h" />
+    <ClInclude Include="Conversion.h" />
+    <ClInclude Include="json.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
