--- a/StateAnalysis/StateAnalysis.vcxproj.filters
+++ b/StateAnalysis/StateAnalysis.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClCompile Include="BSAnalysis.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Conversion.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="state-analisys-module.ini" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BSAnalysis.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Conversion.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
